TODO: cards interactivity, cards layout, posts layout, FB share

--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@ layout: no_header
   </div>
 </div>
 
+<div class="parallax-container" style="height: 200px;">
+  <div class="parallax"><img src='{{ site.baseurl }}/resources/backgroundweb.svg'></div>
+</div>
+
 <a name="foreword"></a>
 <div class="full-height container">
   <div class="section">
     {% include foreword.html %}
   </div>
 </div> 
+
+<div class="parallax-container" style="height: 200px;">
+  <div class="parallax"><img src='{{ site.baseurl }}/resources/backgroundweb.svg'></div>
+</div>
 
 <a name="acknowledgements"></a>
 <div class="full-height container">
