--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ layout: no_header
 </div>
 
 <a name="foreword"></a>
-<div class="full-height container">
-  <div class="section">
+<div class="full-height container valign-wrapper">
+  <div class="section valign">
     {% include foreword.html %}
   </div>
 </div> 
@@ -44,8 +44,8 @@ layout: no_header
 </div>
 
 <a name="acknowledgements"></a>
-<div class="full-height container">
-  <div class="section">
+<div class="full-height container valign-wrapper">
+  <div class="section valign">
     {% include acknowledgements.html %}
   </div>
 </div> 
