--- a/_posts/2015-10-19-Visually Simulating Goal Models over Time.html
+++ b/_posts/2015-10-19-Visually Simulating Goal Models over Time.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Visually Simulating Goal Models over Time"
-author: "Kawin Ethayarajh"
+author: "Jake Fear"
 supervisors: "Alicia Grubb and Professor Marsha Chechik"
 category: "Software Engineering"
 ---
