--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: no_header
 
 <a name="table-of-contents"></a>
 <div class="full-height container valign-wrapper" id="table_of_contents" >
-  <div class="section valign">
+  <div class="section valign full-width">
       {% include table_of_contents.html %}
     </div>
   </div>
