--- a/_posts/2015-10-19-High-Accuracy 3D Scanning by Structured Light Transport.html
+++ b/_posts/2015-10-19-High-Accuracy 3D Scanning by Structured Light Transport.html
@@ -18,9 +18,9 @@ category: "Computer Vision"
 
 <figure>
     <figcaption ><b>a)</b></figcaption>
-    <img src="{{ site.baseurl }}/assets/ZL1.jpg" style="display:block; margin-left:auto; margin-right:auto; max-width:450px"/>
+    <img src="{{ site.baseurl }}/assets/ZL1.jpg"/>
     <figcaption><b>b)</b></figcaption>
-    <img src="{{ site.baseurl }}/assets/ZL2.jpg" style="display:block; margin-left:auto; margin-right:auto; max-width:450px"/>
+    <img src="{{ site.baseurl }}/assets/ZL2.jpg"/>
     <figcaption><b>Figure 1:</b> (a) shows a pair of two corresponding pixels in two cameras. The two pixels are illuminated by the same point in the scene. In (b), one of the cameras is replaced with a projector. But the two pixels are corresponding pixels because the light goes from the pixel in the projector and gets reflected only once in the scene before falling onto the pixel in the camera.</figcaption>
 </figure>
 
