Final formatting. TODO: Make entire card clickable

--- a/_posts/2015-10-19-An Intelligent Guidance System for People with Dementia in a Picture Description Task.html
+++ b/_posts/2015-10-19-An Intelligent Guidance System for People with Dementia in a Picture Description Task.html
@@ -2,7 +2,7 @@
 layout: post
 title: "An Intelligent Guidance System for People with Dementia in a Picture Description Task"
 author: "Hengwei Guo, Oscar Chen, and Hubert Lin"
-supervisors: "Alberto Camacho and Professor Sheila McIlraith”
+supervisors: "Alberto Camacho and Professor Sheila McIlraith"
 category: "Artificial Intelligence"
 ---
 
@@ -73,7 +73,7 @@ category: "Artificial Intelligence"
 <h3 id="action-presenter" class="unnumbered">Action Presenter</h3>
 <p>Besides verbal communications, the AP should be able to perform gestures and facial expressions with guided strategies.</p>
 
-<h4 id="acknowledgements" class="unnumbered">Acknowledgements</h4>
+<h3 id="acknowledgements" class="unnumbered">Acknowledgements</h3>
 <p class="acknowledgements">The work reported here was a joint project with Sheila McIlraith, Frank Rudzicz, Hamidreza Chinaei, Alberto Camacho, and Hoda Zare. We also gratefully acknowledge funding from the Natural Sciences and Engineering Research Council of Canada (NSERC) Undergraduate Student Research Awards program.</p>
 
 <h4>References</h4>
