Updates for mobile version

--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@ layout: no_header
 ---
 
 <div class="background">
-
-  {% include header.html %}
-  
   <div class="section no-pad-box" id="index-banner">
     <div class="container" id="index-container">
-      <br><br><br><br><br><br><br>
       <h1 class="review-title center white-text" id="site-title">RUCS</h1>
-      <div class="row center">
-        <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
-      </div>
-      <div class="row center down-arrow">
-        <i class="material-icons white-text">keyboard_arrow_down</i>
-      </div>
+      <h4 class="review-subtitle white-text center">Review of Undergraduate</br> Computer Science</h4>
+      <i class="material-icons white-text center" id="down-arrow">keyboard_arrow_down</i>
     </div>
   </div>
 </div>
