--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 layout: no_header
 ---
 
-<div class="background">
-  <div class="section no-pad-box" id="index-banner">
-    <div class="container" id="index-container">
-      <h1 class="review-title center white-text" id="site-title">RUCS</h1>
-      <h4 class="review-subtitle white-text center">Review of Undergraduate</br> Computer Science</h4>
-      <i class="material-icons white-text center" id="down-arrow">keyboard_arrow_down</i>
+<div class="background section no-pad-box index-banner">
+  <div class="container">
+    <div class="row">
+      <h4 class="review-subtitle white-text left" id="issue-title">Fall 2015</h4>
     </div>
+    <div class="valign-wrapper center">
+      <div class="valign center" id="title-info">
+        <h1 class="review-title white-text" id="site-title">RUCS</h1>
+        <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4><br>
+      </div>
+    </div>
+    <a href="#" class="waves-effect waves-light btn bottom" id="enter-button"><i class="medium material-icons white-text center" id="down-arrow">keyboard_arrow_down</i></a>
   </div>
 </div>
 
@@ -21,10 +26,10 @@ layout: no_header
 </div>
 
 <a name="foreword"></a>
-<div class="grey lighten-2">
-<div class="full-height container valign-wrapper">
-  <div class="section valign">
-    {% include foreword.html %}
+<div class="grey lighten-4">
+  <div class="full-height container valign-wrapper">
+    <div class="section valign">
+      {% include foreword.html %}
+    </div>
   </div>
-</div>
 </div>
