--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ layout: no_header
     </div>
     <div class="valign-wrapper center">
       <div class="valign center" id="title-info">
+      </br></br>
         <h1 class="review-title white-text" id="site-title">RUCS</h1>
-        <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4><br>
+        <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
       </div>
     </div>
     <a href="#" class="waves-effect waves-light btn bottom" id="enter-button"><i class="medium material-icons white-text center" id="down-arrow">keyboard_arrow_down</i></a>
