Vertical aligned title

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@ layout: no_header
     <div class="row">
       <h4 class="review-subtitle white-text left" id="issue-title">Fall 2015</h4>
     </div>
-    <div class="valign-wrapper center">
+    <div class="transparent-section valign-wrapper">
       <div class="valign center" id="title-info">
-      </br></br>
         <h1 class="review-title white-text" id="site-title">RUCS</h1>
-        <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
       </div>
     </div>
-    <a href="#" class="waves-effect waves-light btn bottom" id="enter-button"><i class="medium material-icons white-text center" id="down-arrow">keyboard_arrow_down</i></a>
+    <div class="review-subtitle-container center">
+      <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
+    </div>
+    <div class="row bottom center">
+    <a href="#" id="enter-button"><i class="medium material-icons white-text" id="down-arrow">keyboard_arrow_down</i></a>
+    </div>
   </div>
 </div>
 
