Updated Letter From the Editor

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ layout: no_header
   </div>
 </div>
 
-<a name="foreword"></a>
+<!-- <a name="foreword"></a>
 <div class="grey lighten-4">
   <div class="full-height container valign-wrapper">
     <div class="section valign">
       {% include foreword.html %}
     </div>
   </div>
-</div>
+</div> -->
