--- a/masthead.html
+++ b/masthead.html
@@ -4,10 +4,18 @@ css: masthead.css
 ---
 <div class="full-height container center valign-wrapper">
 <div class="valign">
-<h1 class="masthead-title">Masthead</h1>
+
 
 <div class="masthead">
 <table>
+	<thead>
+		<tr>
+			<td></td>
+			<td><h1 class="masthead-title">Masthead</h1>
+				<a href="mailto:kawin@cs.toronto.edu">Contact</a>
+			</td>
+		</tr>
+	</thead>
 	<tbody>
 		<tr>
 			<td>Editor-in-Chief</td>
