--- a/_posts/2015-10-19-An Intelligent Guidance System for People with Dementia in a Picture Description Task.html
+++ b/_posts/2015-10-19-An Intelligent Guidance System for People with Dementia in a Picture Description Task.html
@@ -62,7 +62,7 @@ category: "Artificial Intelligence"
 <p>Speech synthesis follows verbal strategies commonly used by caregivers assisting individuals with Alzheimer’s disease. Such strategies include: giving one proposition per utterance, using encouraging comments, and calling the patients by name <span class="citation">[7]</span>.</p>
 <p>When the POMDP decides on an action, the AP will search the session KB for relevant information and then generate an appropriate response. For example, when the POMDP asks the AP to prompt an open-ended question about an object and the patient has just mentioned the object "boy", the AP may generate the speech "Good job. What else can you say about the boy?" Such sentences are generated using manually-tuned templates.</p>
 
-<h1 id="future-work" class="unnumbered">Future Work</h1>
+<h1 id="future-work" class="unnumbered">III. Future Work</h1>
 <h3 id="sensor-module" class="unnumbered">Sensor Module</h3>
 <p>With video input, it may be possible to: estimate emotion from facial expressions; resolve pronoun ambiguity with eye- or hand-tracking (for example, "She is next to her&quot; may be accompanied by gestures towards the subject and object).</p>
 <p>Methods to gain semantic understanding of utterances can be used to recognize objects or relations.</p>
@@ -73,7 +73,7 @@ category: "Artificial Intelligence"
 <h3 id="action-presenter" class="unnumbered">Action Presenter</h3>
 <p>Besides verbal communications, the AP should be able to perform gestures and facial expressions with guided strategies.</p>
 
-<h3 id="acknowledgements" class="unnumbered">Acknowledgements</h3>
+<h4 id="acknowledgements" class="unnumbered">Acknowledgements</h4>
 <p class="acknowledgements">The work reported here was a joint project with Sheila McIlraith, Frank Rudzicz, Hamidreza Chinaei, Alberto Camacho, and Hoda Zare. We also gratefully acknowledge funding from the Natural Sciences and Engineering Research Council of Canada (NSERC) Undergraduate Student Research Awards program.</p>
 
 <h4>References</h4>
