--- a/_posts/2015-10-19-High-Accuracy 3D Scanning by Structured Light Transport.html
+++ b/_posts/2015-10-19-High-Accuracy 3D Scanning by Structured Light Transport.html
@@ -53,7 +53,7 @@ category: "Computer Vision"
 </figure>
 
 
-<h1 id="future-work" class="unnumbered">Future Work</h1>
+<h1 id="future-work" class="unnumbered">IV. Future Work</h1>
 
 <p>We are going to combine the two techniques above so that we can capture an indirect-invariance image, or direct-light-only image. We can ignore the small portion of indirect light which also travels between corresponding epipolar lines when using structured light to acquire correspondence between the projector and the camera. As a result, we expect to get more accurate correspondence, especially in scenes with specular and inner reflection.</p>
 
