--- a/masthead.html
+++ b/masthead.html
@@ -2,8 +2,13 @@
 layout: default
 css: masthead.css
 ---
+<div class="container">
+<br/>
+<a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2 cyan-hover">keyboard_arrow_left</i></a>
+
 <div class="full-height container center valign-wrapper">
 <div class="valign">
+
 <h1 class="masthead-title">Masthead</h1>
 
 <div class="masthead">
@@ -37,6 +42,7 @@ css: masthead.css
 		</tr>
 	</tbody>
 </table>
+</div>
 </div>
 </div>
 </div>
