--- a/masthead.html
+++ b/masthead.html
@@ -2,14 +2,11 @@
 layout: default
 css: masthead.css
 ---
-<div class="container">
+<div class="full-height container">
 <br/>
 <a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2 cyan-hover">keyboard_arrow_left</i></a>
 
-<div class="full-height container center valign-wrapper">
-<div class="valign">
-
-<h1 class="masthead-title">Masthead</h1>
+<h1 class="masthead-title center">Masthead</h1>
 
 <div class="masthead">
 <table>
@@ -42,7 +39,5 @@ css: masthead.css
 		</tr>
 	</tbody>
 </table>
-</div>
-</div>
 </div>
 </div>
