--- a/masthead.html
+++ b/masthead.html
@@ -2,10 +2,8 @@
 layout: default
 css: masthead.css
 ---
-<div class="full-height container">
-<br/>
-<a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2 cyan-hover">keyboard_arrow_left</i></a>
-
+<div class="full-height container valign-wrapper">
+<div class="valign">
 <h1 class="masthead-title center">Masthead</h1>
 
 <div class="masthead">
@@ -39,5 +37,6 @@ css: masthead.css
 		</tr>
 	</tbody>
 </table>
+</div>
 </div>
 </div>
