--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@ layout: no_header
     <div class="row">
       <h4 class="review-subtitle white-text left" id="issue-title">Fall 2015</h4>
     </div>
-    <div class="transparent-section valign-wrapper">
-      <div class="valign center" id="title-info">
+    <div class="review-title-container center" id="title-info">
         <h1 class="review-title white-text" id="site-title">RUCS</h1>
-      </div>
     </div>
     <div class="review-subtitle-container center">
       <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
@@ -22,18 +20,11 @@ layout: no_header
 </div>
 
 <a name="table-of-contents"></a>
-<div class="full-height container valign-wrapper" id="table_of_contents" >
+<div class="full-width">
+<div class="container valign-wrapper" id="table_of_contents" >
   <div class="section valign full-width">
       {% include table_of_contents.html %}
     </div>
   </div>
 </div>
-
-<!-- <a name="foreword"></a>
-<div class="grey lighten-4">
-  <div class="full-height container valign-wrapper">
-    <div class="section valign">
-      {% include foreword.html %}
-    </div>
-  </div>
-</div> -->
+</div>
