added spacing to masthead and removed TOC light effect

--- a/masthead.html
+++ b/masthead.html
@@ -11,8 +11,8 @@ css: masthead.css
 	<tbody>
 		<tr></tr>
 		<tr>
-			<td>Editor-in-Chief</td>
-			<td>Kawin Ethayarajh</td>
+			<td><br/><br/>Editor-in-Chief</td>
+			<td><br/><br/>Kawin Ethayarajh</td>
 		</tr>
 		<tr>
 			<td>Faculty Supervisor</td>
@@ -25,12 +25,11 @@ css: masthead.css
 		</tr>
 		<tr>
 			<td>Design & Layout Director</td>
-			<td>Nicholai Farber</td>
+			<td>Sara Tang</td>
 		</tr>
 		<tr>
-			<td>Layout Associates</td>
-			<td>Mohana Sarmiento</br>
-				Sara Tang</td>
+			<td>Layout Associate</td>
+			<td>Mohana Sarmiento</td>
 		</tr>
 		<tr>
 			<td>Webmaster</td>
