--- a/_posts/2015-10-19-Mediengruppe Bitnik The Internet as an Artistic Medium.html
+++ b/_posts/2015-10-19-Mediengruppe Bitnik The Internet as an Artistic Medium.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "!Mediengruppe Bitnik: The Internet as an Artistic Medium"
+title: "!Mediengruppe Bitnik:<br/>  The Internet as an Artistic Medium"
 author: "Julia Gilenko"
 category: "Profiles and Interviews"
 ---
