fixed bug with down arrow overlapping with text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: no_header
 ---
 
-<div class="background section no-pad-box index-banner">
+<div id="main-background" class="background section no-pad-box index-banner">
   <div class="container">
     <div class="row">
       <h4 class="review-subtitle white-text left" id="issue-title">Fall 2015</h4>
@@ -11,10 +11,14 @@ layout: no_header
         <h1 class="review-title white-text" id="site-title">RUCS</h1>
     </div>
     <div class="review-subtitle-container center">
-      <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
+	<div class="row center">
+      	    <h4 class="review-subtitle white-text">Review of Undergraduate</br> Computer Science</h4>
+    	</div>
     </div>
-    <div class="row bottom center">
-    <a href="#" id="enter-button"><i class="medium material-icons white-text" id="down-arrow">keyboard_arrow_down</i></a>
+    <div class="review-subtitle-container center">
+	<div id="down-arrow-row" class="row center">
+    		<a href="#table-of-contents" id="enter-button"><i class="medium material-icons white-text" id="down-arrow">keyboard_arrow_down</i></a>
+    	</div>
     </div>
   </div>
 </div>
