--- a/masthead.html
+++ b/masthead.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 css: masthead.css
+title: "Masthead"
 ---
 <div class="full-height container valign-wrapper">
 <div class="valign">
